RH-1469 #comment IE browser: 'Edit' and 'Archived' button layout issue

--- a/grails-app/assets/stylesheets/sass/partials/_tab.scss
+++ b/grails-app/assets/stylesheets/sass/partials/_tab.scss
@@ -295,7 +295,9 @@
                     font-weight: 400;
                     height: 25px;
                     padding: 6px 5px 1px;
-                    text-align: left;
+                    text-align: center;
+                    width: 60px;
+                    float: left;
 
                     &:hover {
                         color: $base-color-white;
